first_stage/log/build_2024-08-20_11-23-32/first_stage_rg2/stderr.log
  File "/home/steven/ros2_ws/src/first_stage/install/first_stage_rg2/lib/python3.10/site-packages/first_stage_rg2/first_stage_rg2_ros2.py", line 13
    boilerplate =  
                   ^
SyntaxError: invalid syntax

